--- a/src/pages/admin/admin.scss
+++ b/src/pages/admin/admin.scss
@@ -1,9 +1,2 @@
 page-admin {
-    .content-ios {
-        margin-top: 44px !important;
-    }
-
-    .content-md {
-        margin-top: 56px !important;
-    }
 }
