--- a/src/pages/tv-mode/tv-mode.scss
+++ b/src/pages/tv-mode/tv-mode.scss
@@ -1,9 +1,2 @@
 page-tv-mode {
-    .content-ios {
-        margin-top: 44px !important;
-    }
-
-    .content-md {
-        margin-top: 56px !important;
-    }
 }
